using BERT for example

--- a/examples/pipeline.ipynb
+++ b/examples/pipeline.ipynb
@@ -2,10 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b71a8d1e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Project root: /Users/kat/Desktop/pinned/ginkgo\n",
+      "Python path modified: True\n",
+      "All project modules are now accessible\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "from pathlib import Path\n",
@@ -63,19 +73,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "873bc8c4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "arxiv_id = \"1706.03762\"\n",
+    "arxiv_id = \"1810.04805\"\n",
     "output_dir = Path(\"output\")\n",
     "output_dir.mkdir(exist_ok=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "6de8f101",
    "metadata": {},
    "outputs": [],
@@ -88,10 +98,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "24202d16",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "122384"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "grobid_client = GROBIDClient()\n",
     "with open(pdf_path, \"rb\") as f:\n",
@@ -111,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "98831392",
    "metadata": {},
    "outputs": [],
@@ -122,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "9a7f2dd0",
    "metadata": {},
    "outputs": [],
@@ -143,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "c7847d31",
    "metadata": {},
    "outputs": [],
@@ -155,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "7934b859",
    "metadata": {},
    "outputs": [],
@@ -208,10 +229,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "6bde373d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Full text saved to: output/1810.04805_full_text.txt\n",
+      "All entities saved to: output/1810.04805_all_entities.json\n"
+     ]
+    }
+   ],
    "source": [
     "full_clean_text = \"\\n\\n\".join(s[\"clean_text\"] for s in sections_data)\n",
     "full_text_path = output_dir / f\"{arxiv_id}_full_text.txt\"\n",
@@ -228,108 +258,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d1c5489f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def print_results(entities: list[dict], top_n: int = 20):\n",
-    "    type_dist = Counter(e[\"type\"] for e in entities)\n",
-    "    print(f\"Type distribution: {dict(type_dist)}\\n\")\n",
-    "    \n",
-    "    print(f\"Top {min(top_n, len(entities))} entities:\")\n",
-    "    for i, e in enumerate(entities[:top_n], 1):\n",
-    "        score = e.get(\"pr_score\", 0)\n",
-    "        print(f\"  {i:2d}. {e['text']:<40} {e['type']:<8} {score:.4f}\")\n",
-    "\n",
-    "def validate_results(entities: list[dict]) -> bool:\n",
-    "    entity_texts = {e[\"text\"] for e in entities}\n",
-    "    \n",
-    "    checks = [\n",
-    "        (\"WMT 2014 English-German dataset\" in entity_texts, \"German dataset preserved\"),\n",
-    "        (\"WMT 2014 English-French dataset\" in entity_texts, \"French datasets preserved\"),\n",
-    "        (\"steps\" not in entity_texts, \"single-word infra filtered\"),\n",
-    "        (\"sequences\" not in entity_texts, \"plural infra (lemma) filtered\"),\n",
-    "        (\"hidden states\" not in entity_texts, \"infra phrases filtered\"),\n",
-    "        (\"the model\" not in entity_texts, \"generic patterns filtered\"),\n",
-    "    ]\n",
-    "    \n",
-    "    passed = sum(1 for check, _ in checks if check)\n",
-    "    print(f\"\\nValidation: {passed}/{len(checks)} passed\")\n",
-    "    \n",
-    "    for check, description in checks:\n",
-    "        if not check:\n",
-    "            print(f\"  FAIL: {description}\")\n",
-    "    \n",
-    "    return passed == len(checks)\n",
-    "\n",
-    "def test_normalize():\n",
-    "    print(\"Running test_normalize...\")\n",
-    "    cases = [\n",
-    "        (\"Scaled Dot-Product Attention\", \"scaled dot product attention\"),\n",
-    "        (\"machine translations\", \"machine translation\"),\n",
-    "        (\"Recurrent neural networks\", \"recurrent neural network\"),\n",
-    "    ]\n",
-    "    \n",
-    "    passed = 0\n",
-    "    for original, expected in cases:\n",
-    "        result = normalize_text(original)\n",
-    "        if result == expected:\n",
-    "            passed += 1\n",
-    "        else:\n",
-    "            print(f\"  FAIL: '{original}' -> '{result}' (expected '{expected}')\")\n",
-    "    \n",
-    "    print(f\"normalize_text: {passed}/{len(cases)} passed\")\n",
-    "\n",
-    "def test_fuzzy_matching():\n",
-    "    print(\"Running test_fuzzy_matching...\")\n",
-    "    cases = [\n",
-    "        (\"Recurrent neural networks\", \"recurrent network\", \"method\", True),\n",
-    "        (\"machine translation\", \"neural machine translation\", \"method\", True),\n",
-    "        (\"WMT 2014 English-German dataset\", \"WMT 2014 English-French dataset\", \"dataset\", False),\n",
-    "        (\"input sequence\", \"output sequences\", \"object\", False),\n",
-    "    ]\n",
-    "    \n",
-    "    passed = 0\n",
-    "    for text1, text2, etype, expected in cases:\n",
-    "        entity1 = {\"text\": text1, \"type\": etype}\n",
-    "        entity2 = {\"text\": text2, \"type\": etype}\n",
-    "        result = should_merge(entity1, entity2)\n",
-    "        \n",
-    "        if result == expected:\n",
-    "            passed += 1\n",
-    "        else:\n",
-    "            print(f\"  FAIL: '{text1}' vs '{text2}' -> {result} (expected {expected})\")\n",
-    "    \n",
-    "    print(f\"should_merge: {passed}/{len(cases)} passed\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "b34e512c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running tests...\n",
-      "Running test_normalize...\n",
-      "normalize_text: 3/3 passed\n",
-      "Running test_fuzzy_matching...\n",
-      "should_merge: 4/4 passed\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Running tests...\")\n",
-    "test_normalize()\n",
-    "test_fuzzy_matching()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "id": "2a7bf9dd",
    "metadata": {},
    "outputs": [
@@ -337,14 +265,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading entities from: output/1706.03762_all_entities.json\n",
-      "Loading and processing full text from: output/1706.03762_full_text.txt\n",
+      "Loading entities from: output/1810.04805_all_entities.json\n",
+      "Loading and processing full text from: output/1810.04805_full_text.txt\n",
       "spaCy Doc object created.\n"
      ]
     }
    ],
    "source": [
-    "arxiv_id = \"1706.03762\"\n",
+    "arxiv_id = \"1810.04805\"\n",
     "output_dir = Path(\"output\")\n",
     "\n",
     "all_entities_path = output_dir / f\"{arxiv_id}_all_entities.json\"\n",
@@ -362,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "10e03ffa",
    "metadata": {},
    "outputs": [
@@ -396,7 +324,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
+   "id": "ee960eab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_results(entities: list[dict], top_n: int = 20):\n",
+    "    type_dist = Counter(e[\"type\"] for e in entities)\n",
+    "    print(f\"Type distribution: {dict(type_dist)}\\n\")\n",
+    "    \n",
+    "    print(f\"Top {min(top_n, len(entities))} entities:\")\n",
+    "    for i, e in enumerate(entities[:top_n], 1):\n",
+    "        score = e.get(\"pr_score\", 0)\n",
+    "        print(f\"  {i:2d}. {e['text']:<40} {e['type']:<8} {score:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "299d0f52",
    "metadata": {},
    "outputs": [
@@ -404,40 +349,52 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Type distribution: {'method': 25, 'task': 15, 'metric': 3, 'dataset': 2, 'object': 2}\n",
+      "Type distribution: {'method': 8, 'task': 20, 'dataset': 16, 'object': 2, 'metric': 4}\n",
       "\n",
       "Top 20 entities:\n",
-      "   1. Transformer                              method   0.0781\n",
-      "   2. self-attention                           method   0.0592\n",
-      "   3. convolution                              method   0.0417\n",
-      "   4. language modeling                        task     0.0413\n",
-      "   5. attention mechanisms                     method   0.0364\n",
-      "   6. Multi-Head Attention                     method   0.0345\n",
-      "   7. transduction models                      task     0.0329\n",
-      "   8. RNs                                      method   0.0324\n",
-      "   9. encoder-decoder architectures            method   0.0308\n",
-      "  10. machine translation                      task     0.0266\n",
-      "  11. model architecture                       method   0.0257\n",
-      "  12. sequence transduction                    task     0.0244\n",
-      "  13. Recurrent neural networks                method   0.0233\n",
-      "  14. long short-term memory                   method   0.0233\n",
-      "  15. gated recurrent                          method   0.0233\n",
-      "  16. recurrent language models                method   0.0233\n",
-      "  17. factorization tricks                     method   0.0233\n",
-      "  18. conditional computation                  method   0.0233\n",
-      "  19. Extended Neural GPU                      method   0.0233\n",
-      "  20. ByteNet                                  method   0.0233\n",
-      "\n",
-      "Validation: 6/6 passed\n",
-      "\n",
-      "Reduction: 85.8% (332 -> 47)\n"
+      "   1. BERT                                     method   0.0671\n",
+      "   2. pre-train                                task     0.0544\n",
+      "   3. fine-tuning                              task     0.0525\n",
+      "   4. NER                                      task     0.0375\n",
+      "   5. question answering                       task     0.0249\n",
+      "   6. NLI                                      task     0.0247\n",
+      "   7. MLM                                      method   0.0201\n",
+      "   8. next sentence prediction                 task     0.0194\n",
+      "   9. GLUE                                     dataset  0.0180\n",
+      "  10. ELMo                                     method   0.0171\n",
+      "  11. MNLI                                     task     0.0168\n",
+      "  12. LTR                                      method   0.0127\n",
+      "  13. entailment                               task     0.0127\n",
+      "  14. MRPC                                     dataset  0.0108\n",
+      "  15. BiLSTM                                   method   0.0105\n",
+      "  16. SQuAD                                    dataset  0.0093\n",
+      "  17. Wikipedia                                dataset  0.0092\n",
+      "  18. Stanford Question Answering Dataset      dataset  0.0085\n",
+      "  19. ablation experiments                     task     0.0084\n",
+      "  20. sentence pairs                           object   0.0083\n"
      ]
     }
    ],
    "source": [
-    "print_results(filtered_entities)\n",
-    "validate_results(filtered_entities)\n",
-    "\n",
+    "print_results(filtered_entities)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "5a29ba42",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Reduction: 92.3% (652 -> 50)\n"
+     ]
+    }
+   ],
+   "source": [
     "impact = analyze_impact(all_entities, filtered_entities)\n",
     "print(f\"\\nReduction: {impact['reduction_pct']:.1f}% ({impact['original_count']} -> {impact['filtered_count']})\")"
    ]
