improved BERT example

--- a/examples/pipeline.ipynb
+++ b/examples/pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "b71a8d1e",
    "metadata": {},
    "outputs": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "8d51c66c",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "873bc8c4",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "6de8f101",
    "metadata": {},
    "outputs": [],
@@ -98,17 +98,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "24202d16",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "122384"
+       "122311"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "98831392",
    "metadata": {},
    "outputs": [],
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "9a7f2dd0",
    "metadata": {},
    "outputs": [],
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "c7847d31",
    "metadata": {},
    "outputs": [],
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "7934b859",
    "metadata": {},
    "outputs": [],
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "6bde373d",
    "metadata": {},
    "outputs": [
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "2a7bf9dd",
    "metadata": {},
    "outputs": [
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "10e03ffa",
    "metadata": {},
    "outputs": [
@@ -324,12 +324,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "ee960eab",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def print_results(entities: list[dict], top_n: int = 20):\n",
+    "def print_results(entities: list[dict], top_n: int = 50):\n",
     "    type_dist = Counter(e[\"type\"] for e in entities)\n",
     "    print(f\"Type distribution: {dict(type_dist)}\\n\")\n",
     "    \n",
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "299d0f52",
    "metadata": {},
    "outputs": [
@@ -349,29 +349,59 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Type distribution: {'method': 8, 'task': 20, 'dataset': 16, 'object': 2, 'metric': 4}\n",
+      "Type distribution: {'method': 11, 'task': 21, 'dataset': 17, 'object': 1}\n",
       "\n",
-      "Top 20 entities:\n",
-      "   1. BERT                                     method   0.0671\n",
-      "   2. pre-train                                task     0.0544\n",
-      "   3. fine-tuning                              task     0.0525\n",
-      "   4. NER                                      task     0.0375\n",
-      "   5. question answering                       task     0.0249\n",
-      "   6. NLI                                      task     0.0247\n",
-      "   7. MLM                                      method   0.0201\n",
-      "   8. next sentence prediction                 task     0.0194\n",
-      "   9. GLUE                                     dataset  0.0180\n",
-      "  10. ELMo                                     method   0.0171\n",
-      "  11. MNLI                                     task     0.0168\n",
-      "  12. LTR                                      method   0.0127\n",
-      "  13. entailment                               task     0.0127\n",
-      "  14. MRPC                                     dataset  0.0108\n",
-      "  15. BiLSTM                                   method   0.0105\n",
-      "  16. SQuAD                                    dataset  0.0093\n",
-      "  17. Wikipedia                                dataset  0.0092\n",
-      "  18. Stanford Question Answering Dataset      dataset  0.0085\n",
-      "  19. ablation experiments                     task     0.0084\n",
-      "  20. sentence pairs                           object   0.0083\n"
+      "Top 50 entities:\n",
+      "   1. BERT                                     method   0.0691\n",
+      "   2. fine-tuning                              task     0.0556\n",
+      "   3. pre-training                             task     0.0398\n",
+      "   4. NER                                      method   0.0352\n",
+      "   5. NLI                                      task     0.0272\n",
+      "   6. question answering                       task     0.0253\n",
+      "   7. ELMo                                     method   0.0232\n",
+      "   8. GLUE                                     dataset  0.0210\n",
+      "   9. training data                            dataset  0.0199\n",
+      "  10. next sentence prediction                 task     0.0197\n",
+      "  11. MLM                                      method   0.0194\n",
+      "  12. MNLI                                     dataset  0.0158\n",
+      "  13. MRPC                                     task     0.0132\n",
+      "  14. RTL                                      method   0.0127\n",
+      "  15. entailment                               task     0.0117\n",
+      "  16. Dev set                                  dataset  0.0117\n",
+      "  17. LTR                                      method   0.0102\n",
+      "  18. named entity recognition                 task     0.0101\n",
+      "  19. Wikipedia                                dataset  0.0096\n",
+      "  20. SQuAD                                    dataset  0.0092\n",
+      "  21. binary classification                    task     0.0090\n",
+      "  22. machine translation                      task     0.0083\n",
+      "  23. Stanford Question Answering Dataset      dataset  0.0083\n",
+      "  24. QNLI                                     dataset  0.0082\n",
+      "  25. sentiment analysis                       task     0.0077\n",
+      "  26. answer span                              object   0.0076\n",
+      "  27. BiLSTM                                   method   0.0075\n",
+      "  28. language understanding                   task     0.0075\n",
+      "  29. paraphrasing                             task     0.0072\n",
+      "  30. training examples                        dataset  0.0072\n",
+      "  31. denoising                                task     0.0067\n",
+      "  32. ESIM+ELMo                                method   0.0066\n",
+      "  33. Left-to-Right (LTR) LM                   method   0.0066\n",
+      "  34. Books Corpus                             dataset  0.0064\n",
+      "  35. ablation studies                         task     0.0063\n",
+      "  36. Trivia QA                                dataset  0.0063\n",
+      "  37. text generation                          task     0.0062\n",
+      "  38. pretraining data                         dataset  0.0055\n",
+      "  39. training dataset                         dataset  0.0055\n",
+      "  40. Stanford Sentiment Treebank              dataset  0.0052\n",
+      "  41. CoLA The Corpus of Linguistic Acceptability dataset  0.0052\n",
+      "  42. Semantic Textual Similarity Benchmark    dataset  0.0052\n",
+      "  43. MRPC Microsoft Research Paraphrase Corpus dataset  0.0052\n",
+      "  44. LSTMs                                    method   0.0051\n",
+      "  45. predict the answer text span             task     0.0051\n",
+      "  46. maximum scoring span                     task     0.0051\n",
+      "  47. grounded commonsense inference           task     0.0051\n",
+      "  48. choose the most plausible continuation   task     0.0051\n",
+      "  49. Adam                                     method   0.0050\n",
+      "  50. token predictions                        task     0.0048\n"
      ]
     }
    ],
@@ -381,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "id": "5a29ba42",
    "metadata": {},
    "outputs": [
@@ -390,7 +420,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Reduction: 92.3% (652 -> 50)\n"
+      "Reduction: 92.1% (631 -> 50)\n"
      ]
     }
    ],
