--- a/examples/pipeline.ipynb
+++ b/examples/pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "b71a8d1e",
    "metadata": {},
    "outputs": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "8d51c66c",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "873bc8c4",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "6de8f101",
    "metadata": {},
    "outputs": [],
@@ -98,17 +98,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "24202d16",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "122311"
+       "122480"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "98831392",
    "metadata": {},
    "outputs": [],
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "9a7f2dd0",
    "metadata": {},
    "outputs": [],
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "c7847d31",
    "metadata": {},
    "outputs": [],
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "7934b859",
    "metadata": {},
    "outputs": [],
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "6bde373d",
    "metadata": {},
    "outputs": [
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "2a7bf9dd",
    "metadata": {},
    "outputs": [
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "10e03ffa",
    "metadata": {},
    "outputs": [
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "ee960eab",
    "metadata": {},
    "outputs": [],
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "299d0f52",
    "metadata": {},
    "outputs": [
@@ -349,59 +349,59 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Type distribution: {'method': 11, 'task': 21, 'dataset': 17, 'object': 1}\n",
+      "Type distribution: {'method': 10, 'task': 15, 'dataset': 25}\n",
       "\n",
       "Top 50 entities:\n",
-      "   1. BERT                                     method   0.0691\n",
-      "   2. fine-tuning                              task     0.0556\n",
-      "   3. pre-training                             task     0.0398\n",
-      "   4. NER                                      method   0.0352\n",
-      "   5. NLI                                      task     0.0272\n",
-      "   6. question answering                       task     0.0253\n",
-      "   7. ELMo                                     method   0.0232\n",
-      "   8. GLUE                                     dataset  0.0210\n",
-      "   9. training data                            dataset  0.0199\n",
-      "  10. next sentence prediction                 task     0.0197\n",
-      "  11. MLM                                      method   0.0194\n",
-      "  12. MNLI                                     dataset  0.0158\n",
-      "  13. MRPC                                     task     0.0132\n",
-      "  14. RTL                                      method   0.0127\n",
-      "  15. entailment                               task     0.0117\n",
-      "  16. Dev set                                  dataset  0.0117\n",
-      "  17. LTR                                      method   0.0102\n",
-      "  18. named entity recognition                 task     0.0101\n",
-      "  19. Wikipedia                                dataset  0.0096\n",
-      "  20. SQuAD                                    dataset  0.0092\n",
-      "  21. binary classification                    task     0.0090\n",
-      "  22. machine translation                      task     0.0083\n",
-      "  23. Stanford Question Answering Dataset      dataset  0.0083\n",
-      "  24. QNLI                                     dataset  0.0082\n",
-      "  25. sentiment analysis                       task     0.0077\n",
-      "  26. answer span                              object   0.0076\n",
-      "  27. BiLSTM                                   method   0.0075\n",
-      "  28. language understanding                   task     0.0075\n",
-      "  29. paraphrasing                             task     0.0072\n",
-      "  30. training examples                        dataset  0.0072\n",
-      "  31. denoising                                task     0.0067\n",
-      "  32. ESIM+ELMo                                method   0.0066\n",
-      "  33. Left-to-Right (LTR) LM                   method   0.0066\n",
-      "  34. Books Corpus                             dataset  0.0064\n",
-      "  35. ablation studies                         task     0.0063\n",
-      "  36. Trivia QA                                dataset  0.0063\n",
-      "  37. text generation                          task     0.0062\n",
-      "  38. pretraining data                         dataset  0.0055\n",
-      "  39. training dataset                         dataset  0.0055\n",
-      "  40. Stanford Sentiment Treebank              dataset  0.0052\n",
-      "  41. CoLA The Corpus of Linguistic Acceptability dataset  0.0052\n",
-      "  42. Semantic Textual Similarity Benchmark    dataset  0.0052\n",
-      "  43. MRPC Microsoft Research Paraphrase Corpus dataset  0.0052\n",
-      "  44. LSTMs                                    method   0.0051\n",
-      "  45. predict the answer text span             task     0.0051\n",
-      "  46. maximum scoring span                     task     0.0051\n",
-      "  47. grounded commonsense inference           task     0.0051\n",
-      "  48. choose the most plausible continuation   task     0.0051\n",
-      "  49. Adam                                     method   0.0050\n",
-      "  50. token predictions                        task     0.0048\n"
+      "   1. BERT                                     method   0.0677\n",
+      "   2. fine-tuning                              task     0.0598\n",
+      "   3. Open AI GPT                              method   0.0465\n",
+      "   4. NER                                      method   0.0358\n",
+      "   5. question answering                       task     0.0291\n",
+      "   6. NLI                                      task     0.0270\n",
+      "   7. classification                           task     0.0248\n",
+      "   8. training data                            dataset  0.0230\n",
+      "   9. ELMo                                     method   0.0226\n",
+      "  10. MNLI                                     dataset  0.0200\n",
+      "  11. SQuAD                                    dataset  0.0177\n",
+      "  12. next sentence prediction                 task     0.0155\n",
+      "  13. MRPC                                     dataset  0.0149\n",
+      "  14. Masked LM                                method   0.0141\n",
+      "  15. named entity recognition                 task     0.0130\n",
+      "  16. Stanford Question Answering Dataset      dataset  0.0122\n",
+      "  17. QNLI                                     dataset  0.0122\n",
+      "  18. sentence pairs                           dataset  0.0120\n",
+      "  19. Dev set                                  dataset  0.0117\n",
+      "  20. Wikipedia                                dataset  0.0115\n",
+      "  21. sentiment analysis                       task     0.0107\n",
+      "  22. LTR                                      method   0.0102\n",
+      "  23. machine translation                      task     0.0095\n",
+      "  24. paraphrasing                             task     0.0091\n",
+      "  25. text generation                          task     0.0081\n",
+      "  26. BiLSTM                                   method   0.0080\n",
+      "  27. QP Quora Question Pairs                  dataset  0.0079\n",
+      "  28. positive examples                        dataset  0.0079\n",
+      "  29. negative examples                        dataset  0.0079\n",
+      "  30. Stanford Sentiment Treebank              dataset  0.0079\n",
+      "  31. CoLA The Corpus of Linguistic Acceptability dataset  0.0079\n",
+      "  32. Semantic Textual Similarity Benchmark    dataset  0.0079\n",
+      "  33. GLUE tasks                               dataset  0.0078\n",
+      "  34. language understanding                   task     0.0076\n",
+      "  35. Books Corpus                             dataset  0.0072\n",
+      "  36. LSTMs                                    method   0.0070\n",
+      "  37. labeled training examples                dataset  0.0069\n",
+      "  38. tuning data                              dataset  0.0068\n",
+      "  39. Left-to-Right (LTR) LM                   method   0.0068\n",
+      "  40. predict a single word                    task     0.0067\n",
+      "  41. development set                          dataset  0.0067\n",
+      "  42. ESIM+ELMo                                method   0.0066\n",
+      "  43. token predictions                        task     0.0065\n",
+      "  44. grounded commonsense inference           task     0.0063\n",
+      "  45. sentence-pair completion                 task     0.0063\n",
+      "  46. Trivia QA                                dataset  0.0063\n",
+      "  47. GLUE benchmark                           dataset  0.0058\n",
+      "  48. Ima-ge Net                               dataset  0.0058\n",
+      "  49. RTE Recognizing Textual Entailment       dataset  0.0057\n",
+      "  50. natural language inference dataset       dataset  0.0057\n"
      ]
     }
    ],
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "5a29ba42",
    "metadata": {},
    "outputs": [
@@ -420,7 +420,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Reduction: 92.1% (631 -> 50)\n"
+      "Reduction: 89.2% (461 -> 50)\n"
      ]
     }
    ],
