BERT example v3 (with sentence_context included)

--- a/examples/pipeline.ipynb
+++ b/examples/pipeline.ipynb
@@ -57,7 +57,7 @@
     "from config.llm import LangExtractConfig, GeminiConfig\n",
     "from config.nlp import NLPConfig\n",
     "from nlp.structural import SectionProcessor\n",
-    "from nlp.semantic import SemanticExtractor\n",
+    "from nlp.semantic import EntityExtractor\n",
     "from nlp.syntactic import parse\n",
     "from utils.clean_text import preprocess_section\n",
     "\n",
@@ -105,7 +105,7 @@
     {
      "data": {
       "text/plain": [
-       "122480"
+       "122604"
       ]
      },
      "execution_count": 5,
@@ -176,55 +176,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "7934b859",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import langextract as lx\n",
-    "from llm.prompts.langextract import PROMPT, EXAMPLES\n",
     "from config.nlp import normalize_section\n",
     "\n",
+    "extractor = EntityExtractor(langextract_config)\n",
     "all_entities = []\n",
     "\n",
     "for section_data in sections_data:\n",
     "    normalized_title = normalize_section(section_data[\"title\"], nlp_config.patterns)\n",
     "    section_config = nlp_config.sections.get(normalized_title, nlp_config.sections[\"default\"])\n",
     "    \n",
-    "    result = lx.extract(\n",
-    "        text_or_documents=section_data[\"clean_text\"],\n",
-    "        prompt_description=PROMPT,\n",
-    "        examples=EXAMPLES,\n",
-    "        model_id=langextract_config.model_id,\n",
-    "        api_key=langextract_config.api_key,\n",
-    "        extraction_passes=section_config.extraction_passes,\n",
-    "        max_workers=langextract_config.max_workers,\n",
-    "        max_char_buffer=section_config.max_char_buffer,\n",
-    "    )\n",
+    "    section_doc = nlp(section_data[\"clean_text\"])\n",
     "    \n",
-    "    section_entities = []\n",
-    "    for extraction in result.extractions:\n",
-    "        entity_dict = {\n",
-    "            \"text\": extraction.extraction_text,\n",
-    "            \"type\": extraction.extraction_class,\n",
-    "            \"char_interval\": (\n",
-    "                {\n",
-    "                    \"start_pos\": extraction.char_interval.start_pos,\n",
-    "                    \"end_pos\": extraction.char_interval.end_pos,\n",
-    "                }\n",
-    "                if extraction.char_interval\n",
-    "                else None\n",
-    "            ),\n",
-    "            \"section\": section_data[\"title\"]\n",
-    "        }\n",
-    "        section_entities.append(entity_dict)\n",
+    "    section_entities = extractor.extract(section_data[\"clean_text\"], section_config)\n",
+    "    \n",
+    "    entities_with_context = extractor.convert_to_spans(section_entities, section_doc, context_size=2)\n",
+    "    \n",
+    "    serializable_entities = []\n",
+    "    for entity in entities_with_context:\n",
+    "        entity_copy = dict(entity)\n",
+    "        del entity_copy[\"span\"]\n",
+    "        entity_copy[\"section\"] = section_data[\"title\"]\n",
+    "        serializable_entities.append(entity_copy)\n",
     "    \n",
     "    title = section_data[\"title\"].replace(\" \", \"_\").replace(\"/\", \"_\")\n",
-    "    section_json = json.dumps(section_entities, indent=2)\n",
     "    section_path = output_dir / f\"{arxiv_id}_{title}_entities.json\"\n",
-    "    section_path.write_text(section_json)\n",
+    "    section_path.write_text(json.dumps(serializable_entities, indent=2))\n",
     "    \n",
-    "    all_entities.extend(section_entities)"
+    "    all_entities.extend(serializable_entities)"
    ]
   },
   {
@@ -291,6 +274,43 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "b2cb8c78",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total entities: 459\n",
+      "Entities with valid spans: 459\n",
+      "Entities with context saved to: output/1810.04805_entities_with_context.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "extractor = EntityExtractor(langextract_config)\n",
+    "entities_with_spans = extractor.convert_to_spans(all_entities, doc, context_size=2)\n",
+    "\n",
+    "print(f\"Total entities: {len(all_entities)}\")\n",
+    "print(f\"Entities with valid spans: {len(entities_with_spans)}\")\n",
+    "\n",
+    "serializable_entities = []\n",
+    "for entity in entities_with_spans:\n",
+    "    entity_copy = dict(entity)\n",
+    "    entity_copy[\"span_text\"] = entity_copy[\"span\"].text\n",
+    "    del entity_copy[\"span\"]\n",
+    "    serializable_entities.append(entity_copy)\n",
+    "\n",
+    "entities_with_spans_path = output_dir / f\"{arxiv_id}_entities_with_context.json\"\n",
+    "with open(entities_with_spans_path, \"w\") as f:\n",
+    "    json.dump(serializable_entities, f, indent=2)\n",
+    "\n",
+    "print(f\"Entities with context saved to: {entities_with_spans_path}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "10e03ffa",
    "metadata": {},
    "outputs": [
@@ -324,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "ee960eab",
    "metadata": {},
    "outputs": [],
@@ -341,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "299d0f52",
    "metadata": {},
    "outputs": [
@@ -411,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "5a29ba42",
    "metadata": {},
    "outputs": [
@@ -420,7 +440,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Reduction: 89.2% (461 -> 50)\n"
+      "Reduction: 89.1% (459 -> 50)\n"
      ]
     }
    ],
