--- a/examples/pipeline.ipynb
+++ b/examples/pipeline.ipynb
@@ -992,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "f9737895",
    "metadata": {},
    "outputs": [
@@ -1024,67 +1024,18 @@
     "    G.add_node(e['text'], type=e['type'], score=e.get('pr_score', 0))\n",
     "\n",
     "for rel in explicit_relations[:20]:\n",
-    "    if rel.e1 in G.nodes() and rel.e2 in G.nodes():\n",
-    "        G.add_edge(rel.e1, rel.e2, \n",
-    "                   relation=rel.rel_type, \n",
-    "                   confidence=rel.confidence,\n",
-    "                   edge_type='explicit')\n",
+    "    G.add_edge(rel.e1, rel.e2, \n",
+    "               relation=rel.rel_type, \n",
+    "               confidence=rel.confidence,\n",
+    "               edge_type='explicit')\n",
     "\n",
     "for rel in implicit_relations[:10]:\n",
-    "    if rel.e_i in G.nodes() and rel.e_j in G.nodes():\n",
+    "    if rel.e_i in G and rel.e_j in G:\n",
     "        G.add_edge(rel.e_i, rel.e_j,\n",
     "                   confidence=rel.confidence,\n",
     "                   edge_type='implicit')\n",
     "\n",
-    "print(f\"Knowledge graph: {G.number_of_nodes()} nodes, {G.number_of_edges()} edges\")\n",
-    "\n",
-    "plt.figure(figsize=(20, 14))\n",
-    "\n",
-    "pos = nx.spring_layout(G, k=2, iterations=50, seed=42)\n",
-    "\n",
-    "node_colors = []\n",
-    "node_sizes = []\n",
-    "for node in G.nodes():\n",
-    "    node_type = G.nodes[node]['type']\n",
-    "    if node_type == 'method':\n",
-    "        node_colors.append('lightblue')\n",
-    "    elif node_type == 'task':\n",
-    "        node_colors.append('lightgreen')\n",
-    "    elif node_type == 'dataset':\n",
-    "        node_colors.append('lightyellow')\n",
-    "    else:\n",
-    "        node_colors.append('lightgray')\n",
-    "    \n",
-    "    score = G.nodes[node]['score']\n",
-    "    node_sizes.append(3000 * score + 100)\n",
-    "\n",
-    "explicit_edges = [(u, v) for u, v, d in G.edges(data=True) if d.get('edge_type') == 'explicit']\n",
-    "implicit_edges = [(u, v) for u, v, d in G.edges(data=True) if d.get('edge_type') == 'implicit']\n",
-    "\n",
-    "nx.draw_networkx_nodes(G, pos, node_color=node_colors, node_size=node_sizes, alpha=0.7)\n",
-    "\n",
-    "nx.draw_networkx_edges(G, pos, edgelist=explicit_edges, edge_color='blue', \n",
-    "                       arrows=True, arrowsize=20, width=2, alpha=0.6)\n",
-    "\n",
-    "nx.draw_networkx_edges(G, pos, edgelist=implicit_edges, edge_color='red', \n",
-    "                       style='dashed', arrows=True, arrowsize=15, width=1, alpha=0.4)\n",
-    "\n",
-    "nx.draw_networkx_labels(G, pos, font_size=8, font_weight='bold')\n",
-    "\n",
-    "plt.title(\"Knowledge Graph: BERT Paper\", fontsize=16)\n",
-    "plt.axis('off')\n",
-    "\n",
-    "legend_elements = [\n",
-    "    plt.scatter([], [], c='lightblue', s=100, label='Method'),\n",
-    "    plt.scatter([], [], c='lightgreen', s=100, label='Task'),\n",
-    "    plt.scatter([], [], c='lightyellow', s=100, label='Dataset'),\n",
-    "    plt.Line2D([0], [0], color='blue', linewidth=2, label='Explicit'),\n",
-    "    plt.Line2D([0], [0], color='red', linewidth=1, linestyle='--', label='Implicit')\n",
-    "]\n",
-    "plt.legend(handles=legend_elements, loc='upper left', fontsize=10)\n",
-    "\n",
-    "plt.tight_layout()\n",
-    "plt.show()"
+    "print(f\"Knowledge graph: {G.number_of_nodes()} nodes, {G.number_of_edges()} edges\")"
    ]
   }
  ],
